test_suite/alan-2022-examples/failing/000550_mutation.alan
source s4 begin[end
